hc32f448/drivers/hc32_ll_driver/inc/hc32_ll_mpu.h


typedef struct {
    uint32_t u32ExceptionType;          
    uint32_t u32BackgroundWrite;        
    uint32_t u32BackgroundRead;         
} stc_mpu_unit_config_t;
typedef struct {
    uint32_t u32MpuState;               
    uint32_t u32ExceptionType;          
    uint32_t u32BackgroundWrite;        
    uint32_t u32BackgroundRead;         
} stc_mpu_unit_init_t;
typedef struct {
    stc_mpu_unit_config_t stcDma1;      
    stc_mpu_unit_config_t stcDma2;      
} stc_mpu_init_t;
typedef struct {
    uint32_t u32RegionWrite;            
    uint32_t u32RegionRead;             
} stc_mpu_region_permission_t;
typedef struct {
    uint32_t u32BaseAddr;                       
    uint32_t u32Size;                           
    stc_mpu_region_permission_t stcDma1;        
    stc_mpu_region_permission_t stcDma2;        
} stc_mpu_region_init_t;
typedef struct {
    uint32_t u32ExceptionType;          
    uint32_t u32Addr;                   
    uint32_t u32Size;                   
} stc_mpu_sp_init_t;
#define MPU_UNIT_DMA1                           (0x01UL)  
#define MPU_UNIT_DMA2                           (0x02UL)  
#define MPU_UNIT_ALL                            (MPU_UNIT_DMA1 | MPU_UNIT_DMA2)
#define MPU_REGION_NUM0                         (0x00UL)  
#define MPU_REGION_NUM1                         (0x01UL)  
#define MPU_REGION_NUM2                         (0x02UL)  
#define MPU_REGION_NUM3                         (0x03UL)  
#define MPU_REGION_NUM4                         (0x04UL)  
#define MPU_REGION_NUM5                         (0x05UL)  
#define MPU_REGION_NUM6                         (0x06UL)  
#define MPU_REGION_NUM7                         (0x07UL)  
#define MPU_REGION_NUM8                         (0x08UL)  
#define MPU_REGION_NUM9                         (0x09UL)  
#define MPU_REGION_NUM10                        (0x0AUL)  
#define MPU_REGION_NUM11                        (0x0BUL)  
#define MPU_REGION_NUM12                        (0x0CUL)  
#define MPU_REGION_NUM13                        (0x0DUL)  
#define MPU_REGION_NUM14                        (0x0EUL)  
#define MPU_REGION_NUM15                        (0x0FUL)  
#define MPU_BACKGROUND_WR_DISABLE               (MPU_SCR_SMPUBWP)   
#define MPU_BACKGROUND_WR_ENABLE                (0UL)               
#define MPU_BACKGROUND_RD_DISABLE               (MPU_SCR_SMPUBRP)   
#define MPU_BACKGROUND_RD_ENABLE                (0UL)               
#define MPU_UNIT_ENABLE                         (MPU_SCR_SMPUE)
#define MPU_UNIT_DISABLE                        (0UL)
#define MPU_EXP_TYPE_NONE                       (0UL)                   
#define MPU_EXP_TYPE_BUS_ERR                    (MPU_SCR_SMPUACT_0)     
#define MPU_EXP_TYPE_NMI                        (MPU_SCR_SMPUACT_1)     
#define MPU_EXP_TYPE_RST                        (MPU_SCR_SMPUACT)       
#define MPU_REGION_WR_DISABLE                   (MPU_SRGWP_RG0WP)       
#define MPU_REGION_WR_ENABLE                    (0UL)                   
#define MPU_REGION_RD_DISABLE                   (MPU_SRGRP_RG0RP)    
#define MPU_REGION_RD_ENABLE                    (0UL)                   
#define MPU_REGION_SIZE_32BYTE                  (0x04UL)  
#define MPU_REGION_SIZE_64BYTE                  (0x05UL)  
#define MPU_REGION_SIZE_128BYTE                 (0x06UL)  
#define MPU_REGION_SIZE_256BYTE                 (0x07UL)  
#define MPU_REGION_SIZE_512BYTE                 (0x08UL)  
#define MPU_REGION_SIZE_1KBYTE                  (0x09UL)  
#define MPU_REGION_SIZE_2KBYTE                  (0x0AUL)  
#define MPU_REGION_SIZE_4KBYTE                  (0x0BUL)  
#define MPU_REGION_SIZE_8KBYTE                  (0x0CUL)  
#define MPU_REGION_SIZE_16KBYTE                 (0x0DUL)  
#define MPU_REGION_SIZE_32KBYTE                 (0x0EUL)  
#define MPU_REGION_SIZE_64KBYTE                 (0x0FUL)  
#define MPU_REGION_SIZE_128KBYTE                (0x10UL)  
#define MPU_REGION_SIZE_256KBYTE                (0x11UL)  
#define MPU_REGION_SIZE_512KBYTE                (0x12UL)  
#define MPU_REGION_SIZE_1MBYTE                  (0x13UL)  
#define MPU_REGION_SIZE_2MBYTE                  (0x14UL)  
#define MPU_REGION_SIZE_4MBYTE                  (0x15UL)  
#define MPU_REGION_SIZE_8MBYTE                  (0x16UL)  
#define MPU_REGION_SIZE_16MBYTE                 (0x17UL)  
#define MPU_REGION_SIZE_32MBYTE                 (0x18UL)  
#define MPU_REGION_SIZE_64MBYTE                 (0x19UL)  
#define MPU_REGION_SIZE_128MBYTE                (0x1AUL)  
#define MPU_REGION_SIZE_256MBYTE                (0x1BUL)  
#define MPU_REGION_SIZE_512MBYTE                (0x1CUL)  
#define MPU_REGION_SIZE_1GBYTE                  (0x1DUL)  
#define MPU_REGION_SIZE_2GBYTE                  (0x1EUL)  
#define MPU_REGION_SIZE_4GBYTE                  (0x1FUL)  
#define MPU_SP_EXP_TYPE_NMI                     (0UL)                   
#define MPU_SP_EXP_TYPE_RST                     (MPU_MSPPCTL_MSPPACT)   
#define MPU_SP_UNIT_MSP                         (0x01UL)  
#define MPU_SP_UNIT_PSP                         (0x02UL)  
#define MPU_SP_UNIT_ALL                         (MPU_SP_UNIT_MSP | MPU_SP_UNIT_PSP)
#define MPU_FLAG_DMA1                           (MPU_SR_SMPU1EAF)   
#define MPU_FLAG_DMA2                           (MPU_SR_SMPU2EAF)   
#define MPU_FLAG_PSP                            (MPU_SR_PSPEF)      
#define MPU_FLAG_MSP                            (MPU_SR_MSPEF)      
#define MPU_FLAG_ALL                            (MPU_FLAG_DMA1 | MPU_FLAG_DMA2 | MPU_FLAG_PSP | MPU_FLAG_MSP)
#define MPU_IP_AES                              (MPU_IPPR_AESRDP)       
#define MPU_IP_HASH                             (MPU_IPPR_HASHRDP)      
#define MPU_IP_TRNG                             (MPU_IPPR_TRNGRDP)      
#define MPU_IP_CRC                              (MPU_IPPR_CRCRDP)       
#define MPU_IP_EFM                              (MPU_IPPR_EFMRDP)       
#define MPU_IP_WDT                              (MPU_IPPR_WDTRDP)       
#define MPU_IP_SWDT                             (MPU_IPPR_SWDTRDP)      
#define MPU_IP_BKSRAM                           (MPU_IPPR_BKSRAMRDP)    
#define MPU_IP_RTC                              (MPU_IPPR_RTCRDP)       
#define MPU_IP_MPU                              (MPU_IPPR_DMPURDP)      
#define MPU_IP_SRAMC                            (MPU_IPPR_SRAMCRDP)     
#define MPU_IP_INTC                             (MPU_IPPR_INTCRDP)      
#define MPU_IP_RMU_CMU_PWC                      (MPU_IPPR_SYSCRDP)      
#define MPU_IP_FCG                              (MPU_IPPR_MSTPRDP)      
#define MPU_IP_ALL                              (MPU_IP_AES | MPU_IP_HASH | MPU_IP_TRNG  | MPU_IP_CRC    | \
                                                 MPU_IP_EFM | MPU_IP_WDT  | MPU_IP_SWDT  | MPU_IP_BKSRAM | \
                                                 MPU_IP_RTC | MPU_IP_MPU  | MPU_IP_SRAMC | MPU_IP_INTC   | \
                                                 MPU_IP_FCG | MPU_IP_RMU_CMU_PWC)
#define MPU_IP_EXP_TYPE_NONE                    (0UL)               
#define MPU_IP_EXP_TYPE_BUS_ERR                 (MPU_IPPR_BUSERRE)  
#define MPU_REG_LOCK_KEY                        (0x96A4UL)
#define MPU_REG_UNLOCK_KEY                      (0x96A5UL)
void MPU_DeInit(void);
int32_t MPU_Init(const stc_mpu_init_t *pstcMpuInit);
int32_t MPU_StructInit(stc_mpu_init_t *pstcMpuInit);
int32_t MPU_UnitInit(uint32_t u32Unit, stc_mpu_unit_init_t *pstcUnitInit);
int32_t MPU_UnitStructInit(stc_mpu_unit_init_t *pstcUnitInit);
void MPU_SetExceptionType(uint32_t u32Unit, uint32_t u32Type);
void MPU_BackgroundWriteCmd(uint32_t u32Unit, en_functional_state_t enNewState);
void MPU_BackgroundReadCmd(uint32_t u32Unit, en_functional_state_t enNewState);
void MPU_UnitCmd(uint32_t u32Unit, en_functional_state_t enNewState);
en_flag_status_t MPU_GetStatus(uint32_t u32Flag);
void MPU_ClearStatus(uint32_t u32Flag);
int32_t MPU_RegionInit(uint32_t u32Num, const stc_mpu_region_init_t *pstcRegionInit);
int32_t MPU_RegionStructInit(stc_mpu_region_init_t *pstcRegionInit);
void MPU_SetRegionBaseAddr(uint32_t u32Num, uint32_t u32Addr);
void MPU_SetRegionSize(uint32_t u32Num, uint32_t u32Size);
void MPU_RegionWriteCmd(uint32_t u32Num, uint32_t u32Unit, en_functional_state_t enNewState);
void MPU_RegionReadCmd(uint32_t u32Num, uint32_t u32Unit, en_functional_state_t enNewState);
void MPU_RegionCmd(uint32_t u32Num, uint32_t u32Unit, en_functional_state_t enNewState);
int32_t MPU_SPInit(uint32_t u32Unit, const stc_mpu_sp_init_t *pstcSpInit);
int32_t MPU_SPStructInit(stc_mpu_sp_init_t *pstcSpInit);
void MPU_SetSPStartAddr(uint32_t u32Unit, uint32_t u32Addr);
void MPU_SetSPSize(uint32_t u32Unit, uint32_t u32Size);
void MPU_SetSPExceptionType(uint32_t u32Unit, uint32_t u32Type);
void MPU_SPCmd(uint32_t u32Unit, en_functional_state_t enNewState);
void MPU_IP_SetExceptionType(uint32_t u32Type);
void MPU_IP_WriteCmd(uint32_t u32Periph, en_functional_state_t enNewState);
void MPU_IP_ReadCmd(uint32_t u32Periph, en_functional_state_t enNewState);